--- a/Win.html
+++ b/Win.html
@@ -9,5 +9,6 @@
     <p>Hope and Pray.</p>
     <p>Link to<a target="_blank" href="https://github.com/Kasten33/Final-Project">Repository</a>Here</p>
     <p>Will it work?</p>
+    <p>If I do this correctly, please let me play the piano out in the lobby</p>
 </body>
 </html>
